# FeaturesAnalyzer

./: .editorconfig  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  404.html  Dockerfile  LICENSE  Makefile  Pipfile  README.md  db.json  docker-compose.yml  entrypoint.sh  index.html  meson.build  mkdocs.yml  poetry.toml  pyproject.toml  renovate.json  requirements.txt  ruff.toml  settings.json  sitemap.xml  update_reqs.sh  zaujulio.research.FeaturesAnalyzer.json
.github/: FUNDING.yml
.github/workflows/: docs.yml
assets/styles/: colors.css
data/: meson.build  zaujulio.research.FeaturesAnalyzer.desktop.in  zaujulio.research.FeaturesAnalyzer.gschema.xml  zaujulio.research.FeaturesAnalyzer.metainfo.xml.in
data/icons/: meson.build
lib/Adapter/: Adapter.py  Postgres.py  Sqlite3.py  Table.py  __init__.py
lib/ModelManager/: Core.py  Index.py  Metrics.py  Models.py  __init__.py  docs.py  errors.py
lib/data_manager/: data.py  days.py  synthetic.py  transformations.py
lib/database/: __init__.py  connection.py
lib/models/: Data.py  RGS.py  SOM.py  SOM_METRICS.py  __init__.py
lib/util/: __init__.py  metrics.py  mlp.py  numlib.py  path.py  regression.py  som.py  timelib.py
paper/: Principal.tex
paper/lib/: DocumentoInfo.tex  Preambulo.tex
paper/pos-textuais/: Apendice.tex  Referencias.bib
paper/pre-textuais/: Capa.tex  FichaCatalografica.tex  Listas.tex  ResumoEAbstract.tex
paper/pre-textuais/listas/: Figuras.tex  Quadros.tex  Siglas.tex  Simbolos.tex  Tabelas.tex
paper/textuais/capitulo_1/: Introducao.tex
paper/textuais/capitulo_1/sub-topicos/: ApresentacaoDoTrabalho.tex  ContextualizacaoEProblema.tex  DelimitacaoDoEstudo.tex  Justificativa.tex  Objetivos.tex
paper/textuais/capitulo_2/: FundamentacaoTeorica.tex
paper/textuais/capitulo_2/sub-topicos/: TrabalhosRelacionados.tex
paper/textuais/capitulo_3/: Metodologia.tex
paper/textuais/capitulo_3/sub-topicos/: Atividades.tex  PropostaMetodologica.tex  QuestoesDePesquisa.tex
paper/textuais/capitulo_4/: DesenvolvimentoDaPesquisa.tex
paper/textuais/capitulo_4/sub-topicos/: PropostaDeSolucao.tex
paper/textuais/capitulo_5/: Resultados.tex
paper/textuais/capitulo_6/: Conclusoes.tex
paper/textuais/capitulo_6/sub-topicos/: Contribuicoes.tex  Discurssao.tex  Limitacoes.tex  TrabalhosFuturos.tex
po/: POTFILES  meson.build
presentation/: Main.tex
presentation/lib/: DocumentoInfo.tex  Preambulo.tex
presentation/textuais/: Conclusao.tex  Cronograma.tex  FundamentacaoTeorica.tex  Introducao.tex  Metodologia.tex  Resultados.tex
src/: Core.py  PreLoader.py  __init__.py  app.py  featuresanalyzer.gresource.xml  featuresanalyzer.in  main.py  meson.build  window.ui
src/context/: __init__.py  states.py  store.py
src/context/states/: __init__.py  import_settings.py  kmeans_solver.py  mlp_solver.py
src/controller/: DataController.py  PIDController.py  RegressionsController.py  SOMController.py  ThresholdsController.py  __init__.py
src/gui/: window.py
src/interfaces/: __init__.py  application.py  controller.py  module.py  state.py  widget.py
src/lib/: __init__.py
src/lib/model_manager/: __init__.py  model.py  pre_processor.py
src/lib/orm/: __init__.py  db.py  schemas.py  table.py
src/lib/state_manager/: __init__.py  observer.py  state.py
src/lib/utils/: __init__.py  alias.py  bin_.py  hsash.py  lock.py  logger.py  meta.py  time_.py  types.py  types_.py  ui.py
src/model/settings/: current.json  default.json
src/model/thresholds/: current.json  default.json
src/models/: __init__.py  kmeans.py  mlp.py
src/models/pre_processors/: __init__.py  label_encoder.py  normalizer.py
src/res/styles/: light.css
src/templates/: main.py
src/ui/: __init__.py
src/ui/components/: __init__.py  graph_box.py  sidebar.py
src/ui/components/global_apply/: __init__.py  styles.css  widget.py
src/ui/components/shared/: __init__.py
src/ui/components/shared/sidebar_item/: __init__.py  styles.css  widget.py
src/ui/components/sidebar/: __init__.py  sidebar.py
src/ui/components/sidebar/import_settings/: __init__.py  controller.py  styles.css  widget.py
src/ui/components/sidebar/sidebar_item/: __init__.py  styles.css  widget.py
src/ui/components/sidebar_items/: __init__.py
src/ui/layouts/: AppLayout.ui
src/ui/modules/: __init__.py  graph_box.py  graph_notebook.py  sidebar.css  sidebar.py
src/ui/screens/: __init__.py  app_window.py  main_window.py
src/ui/views/windows/: MainWindow.ui  window.ui
src/view/: __init__.py
src/view/GUI/: DataComponent.py  PIDComponent.py  RegressionsComponent.py  SOMComponent.py  ShowComponent.py  ThresholdsComponent.py  __init__.py
src/view/Graphs/: DataGraph.py  PIDGraph.py  SOMGraph.py  ThresholdsGraph.py  __init__.py
v2/: Pipfile  __init__.py  app.py  core.py
v2/controllers/: DataController.py  MainController.py  __init__.py
v2/core/: core.py
v2/interfaces/: Controller.py  Layout.py  SideMenuItem.py  Widget.py  __init__.py
v2/res/styles/: dark.css
v2/views/: GraphView.py  MainView.py  __init__.py
v2/widgets/: DataSideMenuItem.py  MPLCanvas.py  SideMenu.py  __init__.py
v2/widgets/DataMenu/: DataMenu.py  ImportPage.py  PreProcessPage.py  SplitPage.py  __init__.py
v2/widgets/base/: CheckBox.py  ComboBox.py  Label.py  LineEdit.py  MPLCanvas.py  PushButton.py  RadioButton.py  SpinBox.py  TimeEdit.py  __init__.py
(+18 files in other folders)
