[project]
name = "features-analyzer"
version = "0.1.0"
description = "Machine learning features analyzer dashboard"
keywords = ["machine learning", "features", "ia", "proto", "dashboard"]
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "Zaú Júlio A. Galvão, Main developer", email = "zaujulio.dev@gmail.com" },
]
maintainers = [
  { name = "Zaú Júlio A. Galvão, Main developer", email = "zaujulio.dev@gmail.com" },
]

# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [
  "Development Status :: 1 - Planning",
  "Environment :: X11 Applications :: GTK",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
"Homepage" = "https://github.com/ZauJulio/FeaturesAnalyzer"
"Bug Reports" = "https://github.com/ZauJulio/FeaturesAnalyzer/issues"
"Funding" = "https://github.com/sponsors/ZauJulio"
"Say Thanks!" = "https://saythanks.io/to/ZauJulio"
"Source" = "https://github.com/ZauJulio/FeaturesAnalyzer/"

[tool.poetry]
name = "features-analyzer"
package-mode = false


[tool.poetry.dependencies]
joblib = "^1.4.2"
matplotlib = "==3.10.0"
numpy = "==2.2.3"
pandas = "==2.2.3"
pydantic = "^2.10.4"
pygobject = "==3.50.0"
python = "^3.12"
python-dotenv = "^1.0.1"
python-i18n = "^0.3.9"
scikit-learn = "^1.6.0"
scipy = "^1.14.1"
seaborn = "^0.13.2"
tinydb = "^4.8.2"

[tool.poetry.group.dev.dependencies]
jinja2 = "^3.1.5"
lxml = "*"
mkdocs-material = "^9.5.49"
mkdocs-mermaid2-plugin = "^1.2.1"
mkdocs-roamlinks-plugin = "^0.3.2"
mkdocs-rss-plugin = "^1.17.1"
pandas-stubs = "^2.2.3.241126"
poetry-plugin-export = "^1.0.6"
pre-commit = "*"
pygobject-stubs = "==2.12.0"
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
